--- a/project-2/src/components/PageTabs.css
+++ b/project-2/src/components/PageTabs.css
@@ -1,9 +1,77 @@
-.page-tabs .nav-link 
-{
-    cursor: pointer;
+html, body {
+	/* Set so that the application will be the width of the browser */
+	min-height: 100%; 
+
+	margin: 0;
+	padding: 0;
+
+	background-color: rgb(192, 22, 35); 
+
+	font-family: "Arial Black", Gadget, sans-serif;
 }
 
-.page-tabs .nav-link.active 
+ul.topnav {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background-color: rgb(250, 234, 133);
+  	position: sticky;
+  	top: 0;
+
+}
+
+ul.topnav li {
+	float: left;
+}
+
+ul.topnav li a {
+	display: block;
+	color: black;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+}
+
+ul.topnav li a:hover:not(.active) {
+	background-color: rgb(0, 231, 255);
+}
+
+ul.topnav li a.active {
+	background-color: white;
+}
+
+ul.topnav li.right {
+	float: right;
+}
+
+@media screen and (max-width: 600px) 
 {
-    color: blue;
+	ul.topnav li.right, 
+	ul.topnav li 
+	{
+		float: none;
+	}
+}
+
+.main-container {
+	background-color: rgb(92, 226, 2);
+}
+
+.main-container {
+	margin: 12px auto;
+	padding: 15px;
+}
+
+footer {
+	padding: 15px;
+	margin: 12px -15px -15px;
+	background: rgb(2, 1, 0);;
+	color: #FFF;
+	display: flex;
+	align-items: space-around;
+}
+
+footer p {
+	flex: 1 1 auto;
 }
